Updated Favorites and Experience

--- a/favorites.html
+++ b/favorites.html
@@ -22,6 +22,7 @@
     </main>
     <aside>
     <img class="image-1" src="images/xboxone.png" alt="xboxone"></img>
+    <iframe width="160" height="195" src="https://www.youtube.com/embed/cVU4HURKEXs" frameborder="0" allowfullscreen></iframe>
     </aside>
     </body>
     </html>
