--- a/experience.html
+++ b/experience.html
@@ -4,13 +4,14 @@
     <link rel="stylesheet" href="style/style.css" type="text/css" />
     <link rel="shortcut icon" href="images/favicon.ico" type="images/favicon.ico"/>
     </head>
-    <a class="nav" href="https://personal-austinhill.c9users.io/index.html"> Bio</a>
-    <a class="nav" href="https://personal-austinhill.c9users.io/favorites.html"> Favorites</a>
+    <a class="nav" href="index.html"> Bio</a>
+    <a class="nav" href="experience.html"> Experience</a>
+    <a class="nav" href="favorites.html"> Favorites</a>
     <body>
     <header>
     <h1> Resume </h1>
     </header>
-    <main>
+    <main class="main-3">
         <h2></h2>
         <p> I worked for Adler Planetarium in a program called HackLabs from February 2016 to April 2016. I successfully made a presentation about traffic control around Adler. I will graduate from Chicago High School for Agricultural Sciences in the year of 2018.         
 My interests are coding, video gaming, programming, relaxation and sleeping.</p>
