--- a/favorites.html
+++ b/favorites.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" href="style/style.css" type="text/css" />
     <link rel="shortcut icon" href="images/favicon.ico" type="images/favicon.ico"/>
     </head>
-    <a class="nav" href="https://personal-austinhill.c9users.io/experience.html"> Experience</a>
-    <a class="nav" href="https://personal-austinhill.c9users.io/index.html"> Bio</a>
+    <a class="nav" href="index.html"> Bio</a>
+    <a class="nav" href="experience.html"> Experience</a>
+    <a class="nav" href="favorites.html"> Favorites</a>
     <body>
     <header>
     <h1> Hobbies and Interests </h1>
@@ -22,7 +23,7 @@
     </main>
     <aside>
     <img class="image-1" src="images/xboxone.png" alt="xboxone"></img>
-    <iframe width="160" height="195" src="https://www.youtube.com/embed/cVU4HURKEXs" frameborder="0" allowfullscreen></iframe>
+    <iframe width="200" height="200" src="https://www.youtube.com/embed/cVU4HURKEXs" frameborder="0" allowfullscreen></iframe>
     </aside>
     </body>
     </html>
